Update styles, popup, and add assets for extension
Refines widget and popup styles, updates popup HTML, and enhances content script. Adds a screenshot and a test HTML page for documentation and testing purposes.

--- a/popup/popup.html
+++ b/popup/popup.html
@@ -7,7 +7,7 @@
     <title>SDG Badge Settings</title>
     <link rel="stylesheet" href="popup.css">
 </head>
-<body>
+<body class="popup-body">
     <div class="popup-container">
         <div class="popup-header">
             <img src="../icons/icon48.png" alt="SDG Badge" class="popup-icon">
